# wildmeshing-toolkit

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.orig  CNAME  CODE_OF_CONDUCT.md  Dockerfile  Embedding_lifting.ipynb  LICENSE  README.md  Schedule.md  TODO  Untitled.ipynb  _a_m_i_p_s2_d_8h_source.html  _a_m_i_p_s2_d_8hpp_source.html  _a_m_i_p_s2_d__autodiff_8h_source.html  _a_m_i_p_s3_d_8hpp_source.html  _a_m_i_p_s_8h_source.html  _a_m_i_p_s_8hpp_source.html  _a_m_i_p_s_energy_8hpp_source.html  _a_m_i_p_s_optimization_smoothing_8cpp.html  _a_m_i_p_s_optimization_smoothing_8cpp.js  _a_m_i_p_s_optimization_smoothing_8cpp__incl.map  _a_m_i_p_s_optimization_smoothing_8cpp__incl.md5  _a_m_i_p_s_optimization_smoothing_8cpp_source.html  _a_m_i_p_s_optimization_smoothing_8hpp.html  _a_m_i_p_s_optimization_smoothing_8hpp.js  _a_m_i_p_s_optimization_smoothing_8hpp__dep__incl.map  _a_m_i_p_s_optimization_smoothing_8hpp__dep__incl.md5  _a_m_i_p_s_optimization_smoothing_8hpp__incl.map  _a_m_i_p_s_optimization_smoothing_8hpp__incl.md5  _a_m_i_p_s_optimization_smoothing_8hpp_source.html  _a_m_i_p_s_optimization_smoothing_periodic_8cpp.html  _a_m_i_p_s_optimization_smoothing_periodic_8cpp.js  _a_m_i_p_s_optimization_smoothing_periodic_8cpp__incl.map  _a_m_i_p_s_optimization_smoothing_periodic_8cpp__incl.md5  _a_m_i_p_s_optimization_smoothing_periodic_8cpp_source.html  _a_m_i_p_s_optimization_smoothing_periodic_8hpp.html  (+20116 more)
app/: CMakeLists.txt  EdgeCollapsing.cpp  EdgeSplitting.cpp  Envelope.h  Logger.cpp  Logger.hpp  Parameters.h  TetWild.cpp  TetWild.h  common.h  main.cpp
app/EdgeCollapse/: CMakeLists.txt  EdgeCollapse.h  QEC.cpp  ShortestEdgeCollapse.cpp
app/EdgeOperations2d/: AdaptiveRemeshing.cpp  EdgeOperations2d.h  QEC.cpp  ShortestEdgeCollapse.cpp  main.cpp
app/InteriorTetOpt/: CMakeLists.txt  main.cpp
app/ParallelEdgeCollapse/: EdgeCollapse.h  ParallelEdgeCollapse.h  ParallelQEC.cpp  ParallelShortestEdgeCollapse.cpp  QEC.cpp
app/QSLIM/: CMakeLists.txt
app/QuadricEdgeCollapse/: main.cpp
app/Remeshing/: CMakeLists.txt
app/ShortestEdgeCollapse/: CMakeLists.txt
app/adaptive_tessellation/: AdaptiveTessellation.cpp  AdaptiveTessellation.h  AdaptiveTessellation_debug.cpp  AdaptiveTessellation_energy_double.cpp  AdaptiveTessellation_schedule_accept.cpp  AdaptiveTessellation_serialization.cpp  CMakeLists.txt  Collapse.cpp  Collapse.h  Collapse_link_condition.cpp  GlobalIntersection.h  LoggerDataCollector.cpp  LoggerDataCollector.h  PairUtils.hpp  Parameters.cpp  Parameters.h  Smooth.cpp  Smooth.h  Split.cpp  Split.h  Swap.cpp  Swap.h  global_intersection.h  main.cpp  seamed_link_conditions.cpp
app/harmonic_tet/: CMakeLists.txt  HarmonicTet.cpp  HarmonicTet.hpp  main.cpp
app/incremental_tetwild/: CMakeLists.txt  EdgeCollapsing.cpp  EdgeSplitting.cpp  EdgeSwapping.cpp  IncrementalTetWild.cpp  IncrementalTetWild.h  Parameters.h  Smooth.cpp  TriangleInsertion.cpp  VolumemesherInsertion.cpp  VolumemesherInsertion.hpp  main.cpp
app/interior_tet_opt/: main.cpp
app/parallel_harmonic_tet/: ParallelHarmonicTet.cpp  ParallelHarmonicTet.hpp
app/parallel_harmonic_tet /: ParallelHarmonicTet.cpp  ParallelHarmonicTet.hpp
app/pywildmeshing/: CMakeLists.txt  README.md  pywildmeshing.cpp
app/pywmtk/: CMakeLists.txt  README.md  pywmtk.cpp
app/qslim/: CMakeLists.txt
app/remeshing/: CMakeLists.txt  convert_pkl_to_wmtk.py  remesh_pipeline_one_model.py
applications/: CMakeLists.txt  CMakeLists.txt.orig  README.md  integration_test.py  wmtk_add_application.cmake  wmtk_download_test_data.cmake  wmtk_generate_test_config.cmake  wmtk_register_integration_test.cmake
bijective_map/: CMakeLists.txt  FindPointTetMesh.cpp  FindPointTetMesh.hpp  batch_operation_log_reader.cpp  batch_operation_log_reader.hpp  bijective_map_app.cpp  bijective_map_app_tet.cpp  bijective_map_web_gui.py  collapse_debug_utils.cpp  collapse_debug_utils.hpp  generate_iso_line.hpp  generate_plane_curves.cpp  generate_plane_curves.hpp  get_curve_intersections.cpp  get_curve_intersections_new.cpp  handle_collapse.cpp  handle_collapse_curve.cpp  handle_non_collapse.cpp  handle_non_collapse_curve.cpp  handle_one_segment.cpp  launch_web_gui.sh  render_utils.hpp  test_findpointtetmesh.cpp  track_line_app.cpp  track_line_app.hpp  track_operations.cpp  track_operations.hpp  track_operations_curve.cpp  track_operations_curve.hpp  track_operations_tet.cpp  track_operations_tet.hpp  track_point_app.cpp  track_point_app.hpp  vtu_utils.cpp  vtu_utils.hpp
components/: CMakeLists.txt  README.md  components.json  components_include.hpp  components_map.hpp  main.cpp  spec_include.hpp  wmtk_spec.json
components_tests/: CMakeLists.txt  test_input.cpp  test_mesh_info.cpp
python/: CMakeLists.txt
src/: AABBtree.h  AMIPS.cpp  AMIPS.h  CMakeLists.txt  ConcurrentTetMesh.h  EdgeCollapsingConn.cpp  EdgeSplittingConn.cpp  Envelope.h  KDtree.h  Mesh.cpp  Mesh.h  MeshInheritance.h  Parameters.h  SwapMeshConnectivity.cpp  TetMesh.cpp  TetMesh.h  TetWild.cpp  TetWild.h  Tetwild.h  TriMesh.cpp  TriMesh.h  Tuple.cpp  common.h  edge_splitting.h  filtering.h  main.cpp  quality.h  surface_simplification.h  triangle_insertion.h  vertex_smoothing.h
tests/: 2d_tests.cpp  CMakeLists.txt  README.md  free_mesh.cpp  integration_hashes.py  integration_tests.cpp  temp1.cpp  temp2.cpp  temp2.hpp  test_1d_operations.cpp  test_2d_invariants.cpp  test_2d_operation_construction.cpp  test_2d_operations.cpp  test_3d_invariants.cpp  test_3d_operations.cpp  test_SC.cpp  test_accessor.cpp  test_attribute_collection.cpp  test_autodiff.cpp  test_autogen.cpp  test_boundary.cpp  test_cache.cpp  test_delaunay.cpp  test_example_meshes.cpp  test_execution.cpp  test_extract_child_mesh.cpp  test_geom.cpp  test_integral.cpp  test_invariants.cpp  test_io.cpp  test_knn.cpp  test_link_condition.cpp  test_local_switch_search.cpp  test_logging.cpp  test_manifold-extraction.cpp  test_manifold.cpp  test_mesh.cpp  test_mesh_variant.cpp  test_multi_mesh.cpp  test_multi_mesh_visitor.cpp  (+27 more)
wmtk_app/: CMakeLists.txt  extremeopt_app.cpp  main.cpp
(+3843 files in other folders)
