[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "pywmtk"
version = "0.1.0"
description = "Python bindings for WildMeshingToolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "WildMeshingToolkit" }]

[tool.cibuildwheel.linux]
before-all = "yum install -y gmp-devel"

[tool.cibuildwheel.macos]
# Install GMP from source since the Homebrew version causes issues.
before-all = """
    set -e
    GMP_VERSION=6.2.1
    curl -L https://ftp.gnu.org/gnu/gmp/gmp-${GMP_VERSION}.tar.xz -o gmp.tar.xz
    tar xf gmp.tar.xz
    cd gmp-${GMP_VERSION}
    # MPFR is sometimes needed by GMP, but we can disable it for a minimal build
    ./configure --prefix=$PWD/gmp-install --disable-assembly --enable-cxx --with-pic --disable-mpfr
    make -j4
    make install
    cd ..
"""

[tool.cibuildwheel.macos.environment]
GMP_DIR = "gmp-6.2.1/gmp-install"


[tool.scikit-build]
cmake.minimum-version = "3.25"

# --- Build Configuration ---
# To switch to Debug, comment out the Release lines and uncomment the Debug lines
# cmake.build-type = "Release"
# build-dir = "build/Release"

# cmake.build-type = "Debug"
# build-dir = "build/Debug"
cmake.build-type = "RelWithDebInfo"
build-dir = "build/RelWithDebInfo"

cmake.args = [
  "-DWMTK_PYBIND=ON",
  "-DCMAKE_INSTALL_DEFAULT_COMPONENT_NAME=python_bindings",
  # "-DBUILD_TESTING=OFF",
  # "-DWMTK_APP_HARMTET=OFF",
  # "-DWMTK_APP_INTERIOR_TET_OPT=OFF",
  "-D_GLIBCXX_USE_TBB_PAR_BACKEND=0",
]
install.components = ["python_bindings"]
