[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "wildmeshing"
version = "0.4.2"
description = "Python bindings for WildMeshingToolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "WildMeshingToolkit" }]

[tool.cibuildwheel]
# # Build CPython wheels.
build = ["cp*-*"]

# Skip 32-bit builds, Windows ARM, PyPy, and musllinux (the Linux `before-all`
# below uses `yum`, which only exists on the manylinux images).
skip = ["*-win32", "*-win_arm64", "*-*linux_i686", "pp*", "*-musllinux*"]

# Smoke-test every built wheel on its target platform/Python: install it into an
# isolated environment and confirm the extension imports and dispatches. This
# needs no test data. The full data-driven integration suite is run separately
# in the `test_wheels` CI job (see .github/workflows/wheels.yml).
test-requires = "pytest"
test-command = "pytest {project}/tests/python/test_smoke.py"

[tool.cibuildwheel.linux]
before-all = "yum install -y gmp-devel"

[tool.cibuildwheel.linux.environment]
CXXFLAGS = "-D_GLIBCXX_USE_TBB_PAR_BACKEND=0"

[tool.cibuildwheel.macos]
# Install GMP from source since the Homebrew version causes issues.
before-all = """
    set -e
    GMP_VERSION=6.2.1
    curl -L https://ftp.gnu.org/gnu/gmp/gmp-${GMP_VERSION}.tar.xz -o gmp.tar.xz
    tar xf gmp.tar.xz
    cd gmp-${GMP_VERSION}
    # MPFR is sometimes needed by GMP, but we can disable it for a minimal build
    ./configure --prefix=$PWD/gmp-install --disable-assembly --enable-cxx --with-pic --disable-mpfr
    make -j4
    make install
    cd ..
"""

[tool.cibuildwheel.macos.environment]
GMP_DIR = "gmp-6.2.1/gmp-install"


[tool.scikit-build]
cmake.minimum-version = "3.25"

# --- Build Configuration ---
# Release (optimized, no debug symbols) is the default for the published bindings.
# To switch to RelWithDebInfo or Debug, comment out the Release lines and
# uncomment the desired pair below.
cmake.build-type = "Release"
build-dir = "build/Release"

# cmake.build-type = "RelWithDebInfo"
# build-dir = "build/RelWithDebInfo"

# cmake.build-type = "Debug"
# build-dir = "build/Debug"

cmake.args = [
  "-DWMTK_PYBIND=ON",
  "-DCMAKE_INSTALL_DEFAULT_COMPONENT_NAME=python_bindings",
  "-DBUILD_TESTING=OFF",
  "-DWMTK_APP_HARMTET=OFF",
  "-DWMTK_APP_INTERIOR_TET_OPT=OFF",
]
install.components = ["python_bindings"]
